syntax="proto3";

/**
*  No reply or empty message will be sent
*/
message NullValue {
   
  }

/**
 *  Message error code 
 */
enum ReturnCode {
    OK = 0;//Ok
    NOK = 1;//Not Ok
    PARSE_ERROR = 2;//Parse Error
    NOT_IMPLEMENTED = 3;//Not implemented yet
  }